# grok-build

./: .gitignore  Cargo.toml  README.md
crates/codegen/panda-shell/: Cargo.toml  README.md
crates/codegen/panda-shell/src/: engine.rs  models.rs  paths.rs
docs/architecture-lab/native/: Cargo.toml  README.md  build-mac-app.sh  launch.sh
docs/architecture-lab/native/icons/: AppIcon.icns
docs/architecture-lab/native/src/: api.rs  control.rs  fleet.rs  macos_style.rs  main.rs  media.rs  menu.rs  playpen.rs  tui.rs  window.rs
experiments/memory-glass/: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  build-mac-app.sh  build.rs  launch.sh  mg-mini-start.sh
experiments/memory-glass/Resources-pack/: MANIFEST.md
experiments/memory-glass/Resources-pack/hotpipe/: activity-leaderboard.js  body-pose.js  ego.js  float-layout.js  glass-capsule-shell.js  hurdles.js  inspect-dock.js  keyboard-beats.js  lens.js  live.js  market-filmstrip.js  memory-maze-gsplat.js  menu-health-monitor.js  mg-right-drawer.js  mg-tools-drawer.js  product-mode.js  research.js  webgrid-contrail.js  webgrid-play.js
experiments/memory-glass/Resources-pack/vision/: PWA.md  capture-gentle.sh  capture-stream.sh  deploy.html  fleet.html  goals.json  manifest.webmanifest  phone-chat.html  phone-mg.css  phone-pwa.js  phone-setup.html  phone-speak.js  phone-talk.html  phone-wave.js  phone.html  relay.html  speak-local.sh  still-server.py  sw.js
experiments/memory-glass/Resources-pack/voice/: DIAL_IN.md  chat-voice.sh  clone-voice.sh  install-to-panda.sh  mute.sh  session-export.sh  speak-local.sh  speak.sh  status.sh  voice-bridge.sh  voice-sts.sh
experiments/memory-glass/assets/: icon_128.rgba
experiments/memory-glass/docs/: COMPAT_2019_MBP.md  FLEET-PHONE-LINK.md  FLEET-R4-DATA.md  GROK_BUILD_SYNC.md  JUMP_BOOT.md  KBATCH-HANDOFF.md  KEYBOARD-PLANE.md  MINI-WEBGRID-LEADERBOARD.md  PACKAGE_MAP.md  PRIVACY.md  PRODUCT.md  v0.3.0-PRODUCT-CHECKLIST.md
experiments/memory-glass/docs/persona-tensor/: persona-tensor-scaffold.html  persona-tensor-scaffold.json  sync-to-uvspeed-web.sh
experiments/memory-glass/docs/x-promo-packet/: MANIFEST.json  README.md
experiments/memory-glass/hotpipe/: BREAK_THEN_MINI.md  GOALS.md  KBATCH_SESSION.md  LINEAGE.md  MEMORY-GLASS-GROWTH.md  MINI-WEBGRID-LEADERBOARD.md  MINI_BRINGUP.md  README.md  SESSION_HANDOFF.md  X_WRITEUP.md  activity-leaderboard.js  agent-parallel.md  agent.html  bloch-solve-bus.js  body-pose.js  brothernumsey-raider.js  collab-day.js  collab.js  contrail-to-draw.js  deploy.html  dog-pose.js  ego.js  float-keyboard.js  float-layout.js  geo-pattern-float.js  glass-capsule-shell.js  gt-flow-plane.js  hurdles.js  inspect-dock.js  ironline.js  kbatch-dojo-bridge.js  kbatch-fleet-bridge.js  key-popout-menus-seed.js  keyboard-atlas-seed.js  keyboard-beats.js  lang-codec-plane.js  lark-governance.js  leaderboard.html  lens.js  live-solve-hud.js  (+56 more)
experiments/memory-glass/hotpipe/concepts/: IRONLINE.md  ugrad-game-registry.js
experiments/memory-glass/hotpipe/data/: audio-neural-manifest.json  audio-staff-map.json  cube-grid-trails.json  filmstrip-board.json  global-keyboard-matrix.json  glyph-plane-manifest.json  kbatch-r4-axes.json  key-popout-menus.json  keyboard-language-atlas.json  lark-governance-tree.json  lark-tree-extract.json  music-packs.json  pynote-manifest.json  tools-bench-registry.json  webgrid-bench-macbookpro16-1.json  webgrid-bench-macbookpro16-1.md  webgrid-bench-macmini-m4.json  webgrid-bench-macmini-m4.md  webgrid-fleet-board.json
experiments/memory-glass/hotpipe/mitigations/: camera_denied.js  popup_guard.js  portal_wrap.js
experiments/memory-glass/hotpipe/plans/: COLLAB_DAY_OPS.md  COLLAB_SCALE.md  COMPETITIVE_BROWSERS.md  COMPETITIVE_HARD_TRUTH.md  DOWNLOADS_HARVEST.md  HANDOFF-KBATCH-AWAY-2026-07-19.md  IRONLINE_CORTICAL.md  MONTH_COLLAB.md  (+11 more)
experiments/memory-glass/icons/: AppIcon.icns
experiments/memory-glass/plugin/: SKILL.md
experiments/memory-glass/pwa/: README.md  index.html  manifest.webmanifest  sw.js
experiments/memory-glass/scripts/: com.fornever.memoryglass.research.tick.plist  export-filmstrip-board.py  flip-train-bridge.py  harvest_x_cashtags.py  launch-webgrid-laptop.sh  mg-harvest-downloads.py  mg-hotpipe-sync.sh  mg-install-still-server.sh  mg-live-monitor.sh  mg-menu-monitor.sh  mg-overnight-watch.sh  mg-pack-to-grok.sh  mg-research-queue-tick.sh  mg-smoke.sh  mg-stop-cams.sh  mg-video-feed.sh  mg_local_llm.py  overnight-learn-loop.sh  overnight-soak.sh  panda-loop.sh  qbit-dormant-worker.mjs  qbit-smoke.mjs  refresh-flip-board-live.sh  resign-app.sh  soak-morning-brief.py  term-snap-to-truss.sh  train-trial-bus.py  webgrid-collector.py  webgrid-pace-advisor.py
experiments/memory-glass/src/: main.rs
experiments/panda-shell/: Cargo.toml  README.md
experiments/panda-shell/src/: accel.rs  client.rs  daemon.rs  frost.rs  input.rs  layout.rs  main.rs  pane.rs  protocol.rs  theme.rs  window_mode.rs
(+183 files in other folders)
