# Standalone crate — not part of grok-build workspace
[workspace]

[package]
name = "memory-glass-browser"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
description = "Memory Glass — native droplet browser shell (tao + wry / WKWebView). Rust-first, not Chrome/Electron."
license = "Apache-2.0"
publish = false

[[bin]]
name = "memory-glass"
path = "src/main.rs"

[dependencies]
anyhow = "1"
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tao = "0.31"
# transparent feature: macOS WKWebView drawsBackground=false (shell see-through)
wry = { version = "0.48", features = ["transparent"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[profile.release]
lto = "thin"
codegen-units = 4
strip = true
