# Standalone crate — not part of grok-build workspace
[workspace]

[package]
name = "memory-glass-browser"
version = "0.3.0"
edition = "2021"
rust-version = "1.75"
description = "Memory Glass — native macOS browser shell for high-FPS BCI / WebGrid training (tao + wry / WKWebView). Sub-second instrument hot-reload."
license = "Apache-2.0"
publish = false

[[bin]]
name = "memory-glass"
path = "src/main.rs"

[dependencies]
anyhow = "1"
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tao = "0.31"
# transparent feature: macOS WKWebView drawsBackground=false (shell see-through)
wry = { version = "0.48", features = ["transparent"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
block = "0.1"

[profile.release]
lto = "thin"
codegen-units = 4
strip = true
