[package]
name = "panda-shell"
version = "0.2.0"
edition.workspace = true
license.workspace = true
description = "Standalone glass multi-terminal shell — detach/reattach, model strip, Metal frost window."
publish = false

[[bin]]
name = "panda"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true, features = ["event-stream"] }
dirs = { workspace = true }
futures-util = { workspace = true }
portable-pty = { workspace = true }
ptyctl = { path = "../ptyctl" }
ratatui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
# Hybrid frost window
winit = "0.30"
softbuffer = "0.4"

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[lints]
workspace = true
