# Standalone crate — not part of grok-build workspace
[workspace]

[package]
name = "architecture-lab-native"
version = "0.2.0"
edition = "2021"
rust-version = "1.85"
description = "Floating native Grok Build Lab shell — WKWebView (macOS) / WebView2 (Windows), no Electron. Standalone workspace under docs/architecture-lab/native (not monorepo member)."
license = "Apache-2.0"
publish = false

[[bin]]
name = "architecture-lab"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["macros"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync", "time", "net", "fs"] }
tower-http = { version = "0.6", features = ["fs", "cors", "set-header"] }
mime_guess = "2"
# System webview — not Chromium. macOS → WKWebView. Windows → WebView2. Linux → WebKitGTK.
tao = "0.31"
wry = "0.48"
muda = "0.15"
http = "1"
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
# thin LTO keeps release builds practical for iterative lab work
lto = "thin"
codegen-units = 4
strip = true
